Removed old styles, added new ones, fixed flaggedrevs bug
Flaggedrevs compatibity had broken in the last commit
because I forgot that flagged revs returns a string
for the autoreview flag. Also, made minor changes to
JS and documentations.

--- a/resources/ext.protectionIndicator/init.css
+++ b/resources/ext.protectionIndicator/init.css
@@ -1,12 +1,19 @@
-.protectionindicator-extension-footer,
-.protectionindicator-extension-reason {
-	margin: 0.5em 0 0.5em 0;
+.protectionindicator-extension-popup .comment--without-parentheses:before,
+.protectionindicator-extension-popup .mw-changeslist-links:before,
+.protectionindicator-extension-popup .mw-tag-markers:before {
+	content: '( ';
 }
 
-.protectionindicator-extension-log-link:before {
-	content: '(';
+.protectionindicator-extension-popup .comment--without-parentheses:after,
+.protectionindicator-extension-popup .mw-changeslist-links:after,
+.protectionindicator-extension-popup .mw-tag-markers:after {
+	content: ' )';
 }
 
-.protectionindicator-extension-log-link:after {
-	content: ')';
+.protectionindicator-extension-popup .mw-changeslist-links > span:not( :first-child ):before {
+	content: ' | ';
+}
+
+.protectionindicator-extension-popup .protectionindicator-extension-help-text .mw-logline-protect {
+	margin: 0.7em 0 0.7em 0;
 }
